--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <met#aeb3b8et="utf-8">
-        <title>DarkCV - Bootstrap CV Resume Template</title>
+        <title>Data Geek</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -44,7 +44,8 @@
             <div class="row g-5">
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
-                        <img class="w-100 img-fluid mb-2" src="img/TFAHanSolo.jpeg" alt="Image">
+                        <!--<img class="w-100 img-fluid mb-2" src="img/TFAHanSolo.jpeg" alt="Image"> -->
+                        <img class="rounded-circle z-depth-8" src="img/TFAHanSolo.jpeg" data-holder-rendered="true" >
                         <h1 class="text-primary mt-0">Anand K</h1>
                         <div class="mb-2" style="height: 12px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
@@ -54,7 +55,7 @@
                             <a class="btn btn-dark btn-square mx-1" href="https://github.com/Anandkarthick" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
-                            <a href="./Anand_SSE_DataEng.pdf" target="_blank" class="btn w-50 border-end">Download CV</a>
+                            <a href="#" target="_blank" class="btn w-50 border-end">Download CV</a>
                             <a href="" class="btn w-50 btn-scroll">Contact Me</a>
                         </div>
                     </div>
@@ -63,7 +64,7 @@
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
-                        <p>Data Geek! Ambitious, Self-Motivated, Optimistic and Intuitive. Qualified professional with over 12 years of experience and outstanding analytical & leadership skills. Always passionate about learning new things and taking on challenges.</p>
+                        <p>Data Geek! Ambitious, Self-Motivated, Optimistic and Intuitive. Professional with over 12 years of experience and outstanding analytical & leadership skills. Always passionate about learning new things and taking on challenges.</p>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Name:</span> Anandkarthick
@@ -85,7 +86,7 @@
                                 <h5 class="title pb-2 mb-3">Technical</h5>
                                 <div class="skill mb-4">
                                     <p class="mb-6"> Python, Airflow, Airbyte, DBT, ETL, Spark, Scala, SQL, Collibra, Kafka, Tableau, MPP Systems, docker, Segment, Amplitude, BigEye, Fivetran</p>
-                                    <p class="mb-6"> AWS components (<i>including but not limited to :  </i>  S3, EMR, EC2, IAM, Lambda, RDS, Kinesis, Cloudformation)</p>
+                                    <p class="mb-6"> AWS components (S3, RDS, Dynamo DB, EMR, EC2, IAM, Lambda, RDS, Kinesis, SNS, SQS, etc)</p>
                                 </div>
 
                                 <h5 class="title pb-2 mb-3">Concepts</h5>
@@ -104,7 +105,7 @@
                         <div class="border-start border-2 border-light pt-2 ps-5">
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Senior Software Engineering - Data</h5>
+                                <h5 class="mb-1">Senior Software Engineering - Data Analytics & Platforms</h5>
                                 <p class="text-primary mb-2" >EdTech | <small>Udacity</small></p>
                                 <p class="text-light mb-2">SF Bay Area, CA | <small>Sep 2021 - Present</small></p>
                                     <li> Designed and Implemented framework to govern events data from customer data platform using Python, DBT, Airflow, and third party API.</li>
@@ -127,13 +128,6 @@
                                     <li> Contribution to open source : Airbyte connector for Clari to bring in sales/revenue data, bug fix in Apache Atlas Client (Metadata management).</li>
                                     <li> Built robust data pipelines in Airflow with automated unit test cases, data modeling to integrate data via API from third party sources to data lake, operators for Airflow, dbt models to enable analytics on student retention data.</li>
                                     <li> Built reusable data masking and encryption frameworks for PII data, reusable tools for audit compliance and handling.</li>
-                            </div>
-                            
-                            <div class="position-relative mb-4">
-                                <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
-                                <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
-                                <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
                         </div>
                     </section>
@@ -161,12 +155,12 @@
 
                     <!-- Footer Start -->
                     <section class="wow fadeIn" data-wow-delay="0.1s">
-                        <div class="bg-secondary text-light text-center p-5">
-                            <div class="d-flex justify-content-center mb-4">
-                                <a class="btn btn-dark btn-square mx-1" href="https://github.com/Anandkarthick" target="_blank"><i class="fab fa-github"></i></a>
-                                <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <div class="bg-secondary text-light text-center p-1">
+                            <div class="d-flex justify-content-center mb-2">
+                               <!--  <a class="btn btn-dark btn-square mx-1" href="https://github.com/Anandkarthick" target="_blank"><i class="fab fa-github"></i></a>
+                               <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a> -->
                             </div>
                             <div class="d-flex justify-content-center mb-3">
                                 <!--
