--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
     <a  href="https://github.com/Anandkarthick" target="_blank"><i class="fab fa-github fa-2x" style="padding-right: 10px; padding-left: 10px; font: size 60px;"></i></a>
     <a  href="https://www.linkedin.com/in/anandkarthick" target="_blank"><i class="fab fa-linkedin fa-2x" style="padding-right: 10px; padding-left: 10px;"></i></a>
     
-    <script>
-        let text = document.lastModified;
-        text;
-    </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-246516856-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-246516856-1');
+</script>
 
